[package]
name = "ffiruby"
version = "1.0.6" # x-release-please-version
edition = "2021"
rust-version = "1.66"

[lib]
name = "rbspy"
crate-type = ["cdylib"]

[dependencies]
pyroscope = { version="2.0.0", default-features = false, features = ["native-tls"] }
rbspy = { version = "0.46" }
remoteprocess = "0.5"
pretty_env_logger = "0.5"
log = "0.4"
libc = "0.2"
anyhow = "1.0"
